--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "For review the knowledge of NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "mocha 'src/**/*-test.js'"
+    "test": "mocha --require @babel/register 'src/**/*-test.js'"
   },
   "author": "qing.zhou",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/register": "^7.4.4",
     "mocha": "^6.1.4"
   }
 }
