--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "For review the knowledge of NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --require @babel/register 'src/**/*-test.js'"
+    "test": "mocha --require @babel/register --require test/testHelper.js -t 5000 'src/**/*-test.js'"
   },
   "author": "qing.zhou",
   "license": "ISC",
@@ -12,6 +12,8 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/register": "^7.4.4",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^6.1.4"
   }
 }
