--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@babel/register": "^7.4.4",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "sinon": "^7.3.2",
+    "sinon-chai": "^3.3.0"
   }
 }
