--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sinon-chai": "^3.3.0"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.2"
   }
 }
